fix background on mobile
close #12y

--- a/assets/css/neurotidal-style.css
+++ b/assets/css/neurotidal-style.css
@@ -12,15 +12,17 @@ background image
   background-image: url("/images/background/neurotidal-live-background.webp");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed !important;
+  background-attachment: fixed;
 
   @media (max-width: 767px) {
     background-image: url("/images/background/neurotidal-live-background-mobile.webp");
-      background-repeat: no-repeat !important;
-      background-size: cover !important;
-      background-attachment: fixed !important;
+    background-size: contain;
+    background-repeat: repeat-y;
+    background-attachment: scroll;
   }
 }
+
+
 
 
 
